# workshop

./: CMakeLists.txt
.github/workflows/: locale-and-website.yml
.tx/: config
2.7/en/: index.html  search.html  searchindex.js
2.7/en/.doctrees/: environment.pickle
2.7/en/advanced/: chapter-12.html
2.7/en/appendix/: appendix-2.html  appendix-3.html  appendix-4.html
2.7/en/basic/: appendix.html  data.html  pedestrian.html  plpgsql_function.html  sql_function.html  vehicle.html
2.7/en/examples/: boost_dijkstra.html  hanoslav.html  wiki_example.html
2.7/es/: .buildinfo  index.html  search.html  searchindex.js
3.0/en/: index.html  search.html  searchindex.js
3.0/es/: index.html  search.html  searchindex.js
3.0/sv/: index.html  search.html  searchindex.js
dev/en/: index.html  objects.inv  search.html  searchindex.js
dev/es/: .buildinfo  index.html  objects.inv  search.html  searchindex.js
dev/sv/: index.html  objects.inv  search.html  searchindex.js
docs/: CMakeLists.txt  conf.py  index.rst
docs/appendix/: appendix-1.rst
docs/basic/: CMakeLists.txt  appendix.rst  b1-data.rst  chapter-4.rst  chapter-5.rst  chapter-6.rst  chapter-7.rst  chapter-8.rst  graph_views.rst  graphs.rst  pedestrian.rst  plpgsql_function.rst  sql_function.rst  vehicle.rst  withPoints.rst
docs/basic/images/: CMakeLists.txt
docs/basic/images/data/: CMakeLists.txt
docs/basic/images/pedestrian/: CMakeLists.txt
docs/basic/images/sql_function/: CMakeLists.txt
docs/basic/images/vehicle/: CMakeLists.txt
docs/basic/images/withPoints/: CMakeLists.txt
docs/general-intro/: CMakeLists.txt
docs/images/: CMakeLists.txt
docs/images/introduction/: CMakeLists.txt
docs/images/logos/: CMakeLists.txt
docs/images/osgeolive/: CMakeLists.txt
docs/interactions/images/: CMakeLists.txt
docs/interactions/images/chap_QGIS/: CMakeLists.txt
docs/scripts/: CMakeLists.txt
docs/un_sdg/: chapter_2_get_data.rst  chapter_3_sdg3.rst  chapter_4_sdg11.rst  sdg3-health.rst
docs/un_sdg/images/: CMakeLists.txt
docs/un_sdg/images/introduction/: CMakeLists.txt
docs/un_sdg/images/sdg11/: CMakeLists.txt
docs/un_sdg/images/sdg3/: CMakeLists.txt
docs/un_sdg/images/sdg7/: CMakeLists.txt
locale/pot/: index.pot
un-challenge/en/: searchindex.js
un-challenge/es/: index.html  objects.inv  search.html  searchindex.js
(+446 files in other folders)
